--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             add_interrupt_button: true,
             kernel_name: "python3",
             tmpnb_mode: false,
-            url:"http://localhost:32770",
+            url:"http://localhost",
             debug: DEBUG,
           });
           window.thebe= thebe;
